testdata/negative/missing_paren.rs
fn main() {
    let result = add_numbers(5, 3; // Пропущена ')'
}